# -*- coding: utf-8 -*-



[metadata]
name = Mordicus
version = 0.1.0
url = https://gitlab.pam-retd.fr/mordicus/mordicus
author = Consortium "FUI Mordicus"
license = TBD
license_files =
    LICENSE
    CONTRIBUTING.md
description = Nonintrusive Model Order Reduction Library
long_description = Nonintrusive Model Order Reduction Library
platform = Linux, Windows

[options]
python_requires = >=3.6
install_requires =
    basictools>=1.3
    pytest-cov 
    mpi4py
    appdirs
    scikit
    openturns
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src


[build_sphinx]
source-dir = doc
build-dir = doc/_build

